# recover-bootstrap-result

./: .gitignore  README.md  pyproject.toml
Bootstrapping Ground State Correlators in Matrix Theory, Part I/: 00README.json  bootstrapBFSS.bbl  bootstrapBFSS.tex  日志.md
Bootstrapping supersymmetric (matrix) quantum mechanics/: cite.bib  jheppub.sty  main.tex  日志.md  阶段总结-截至Figure11.md
notes_pro/: BFSS-PartI-guidance-1.md  BFSS-toy-Figure4-guidance-1.md  BFSS-toy-Figure4-guidance-2.md  Figure10-guidance-1.md  Figure10-guidance-2.md  Figure10-guidance-3-shift-scale.md  Figure11-guidance-1.md  Figure11-guidance-2.md  Figure4- RR.md  Figure4- WKB.md  Figure5- guidance-1.md  Figure5- guidance-2.md  Figure5- small-g-guidance-3.md  Figure5- small-g-guidance-4.md  Figure6-guidance-1.md  Figure6-guidance-2.md  Figure6-support.md  Figure8-guidance-1.md  Figure8-guidance-2.md  Figure8-guidance-3.md  Figure8-guidance-4.md  Figure9-guidance-1.md  phase_1.md
runs/figure10_largeg_level8_n100/: bounds_partial.csv  config.json  summary.json  summary.md
runs/figure10_largeg_level8_n100_shift_scaled_hybrid/: bounds.csv  config.json  summary.json  summary.md
runs/figure11_smallg_level8_n100_probe9/: bounds.csv  (+2 more)
tests/: test_bootstrap_core.py  test_figure10_matrix_cubic_largeg.py  test_figure11_matrix_cubic_smallg.py  test_figure1_line_scan.py  test_figure1_quadratic.py  test_figure2_quartic.py  test_figure3_convex.py  test_figure4_cubic.py  test_figure5_cubic_smallg.py  test_figure6_cubic.py  test_figure8_matrix_quadratic.py  test_figure9_potential.py  test_toy_figure4_x2y2.py
(+103 files in other folders)
