[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "susy-mp-bootstrap"
version = "0.1.0"
description = "Minimal SUSY/MP bootstrap toolkit for 1D moments and matrix warmups."
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "sympy",
]

[project.optional-dependencies]
sdp = [
  "cvxpy",
]
test = [
  "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

